--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 <body>
 
   <!-- Write your HTML in this file -->
-
+<ul>
+  <li>2 slices of bread</li>
+  <li>4 slices of cheese
+    <li>cheddar</li>
+    <li>mozarella</li>
+    <li>pepper jack</li>
+  </li>
+  
+</ul>
 </body>
 </html>
